ChainCommand-master/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaincommand
  labels:
    app.kubernetes.io/name: chaincommand
    app.kubernetes.io/part-of: chaincommand
