ChainCommand-master/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaincommand
  namespace: chaincommand
  labels:
    app.kubernetes.io/name: chaincommand
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: chaincommand
